fixed flickering text

--- a/style-portfolio.css
+++ b/style-portfolio.css
@@ -1,8 +1,11 @@
-﻿*, *:before, *:after{
+*, *:before, *:after{
     box-sizing: border-box;
     margin: 0;
     padding: 0
 }  
+
+
+
 
 
 
@@ -43,6 +46,11 @@ body{
     -webkit-box-shadow: 0px 13px 17px -4px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 13px 17px -4px rgba(0,0,0,0.75);
     box-shadow: 0px 13px 17px -4px rgba(0,0,0,0.75);
+}
+@media(max-width:768px){
+    .container{
+        overflow-y: scroll;
+    }
 }
 
 .animate{
